@@ -13,14 +13,15 @@ From this directory do the following in a terminal.
   ```mvn clean package```
 2. Start application with tracing agent <br>
   ```java -agentlib:native-image-agent=config-output-dir=target/META-INF/native-image --enable-preview -jar target/graalvm-demo-1.0-SNAPSHOT-jar-with-dependencies.jar```
-3. Then manually run ```StressTest.java``` e.g. from your IDE to hit all execution paths. Then stop the application.
-4. Build native image <br>
+3. Then manually hit ```http://localhost:7070``` in your browser to trigger all execution paths for the tracing agent to pick up.
+4. Stop the application.
+5. Build native image <br>
   ```native-image -jar target/graalvm-demo-1.0-SNAPSHOT-jar-with-dependencies.jar -H:ConfigurationFileDirectories=target/META-INF/native-image -o target/app --no-fallback --enable-preview```
-5. Start native image <br>
+6. Start native image <br>
   ```./target/app```
 
 #### Problem
-When using the ```--enable-preview``` parameter the following exception is thrown on native image startup:<br>
+The following exception is thrown on native image startup: <br>
 ```java.lang.NoSuchMethodError: java.lang.Thread$Builder$OfVirtual.unstarted(java.lang.Runnable)```
 
 It seems the tracing agent fails to correctly pick up a reflective call done by Javalin's ```ReflectiveVirtualThreadBuilder``` [located here](https://github.com/javalin/javalin/blob/master/javalin/src/main/java/io/javalin/util/ConcurrencyUtil.kt#L100).
